<resources>
    <string name="app_name">Student Record</string>
    <string name="welcome_n_back">Welcome \n Back</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>