<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    tools:context=".Login">



    <TextView
        android:id="@+id/textView2"
        android:layout_width="393dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_n_back"
        android:textColor="@color/white"
        android:textSize="32dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="312dp"
        android:layout_height="500dp"
        android:background="@drawable/backgrounddrawable"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/etdMail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/fieldstyle"
            android:drawableStart="@drawable/emailicon"
            android:hint="Enter your email id"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etdMail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/fieldstyle"
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/edtPass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/botton"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/fr"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="176dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="21dp"
            android:text="@string/forgot_password"
            android:textColor="#2193b0" />

        <TextView
            android:id="@+id/or"
            android:layout_width="51dp"
            android:layout_height="37dp"
            android:layout_below="@+id/fr"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="131dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="130dp"
            android:gravity="center_horizontal"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="299dp"
            android:layout_height="40dp"
            android:layout_below="@+id/or"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/facebookicon" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/google"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/link"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/linked"
                android:contentDescription="TODO" />
        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>